# ml_study

./: .gitignore  .gitmodules
api/gemini/: model_image_understanding.ipynb  model_text_gen.ipynb  quickstart.ipynb
docs/: conda_quick_guide.md  fastai_dataloaders.md  fastai_vision.md  git_submodule_init.md  jupyterlab_install.md  kaggle.md  miniconda_install_deprecated.md  miniforge_readme.md  ml_devel_env_general.md  ml_devel_env_mamba.md  ml_devel_packages.md  pylance.md  pytorch-install.md  submodule-list.md  tensorflow_install.md
langchain/wikidoc/: 1-3_prompt.ipynb  1-4_lang_model.ipynb  1-5_output_parser.ipynb  2-1_RAG_basic.ipynb  2-2_RAG_doc_loader.ipynb  2-3_RAG_text_splitter.ipynb  2-4_RAG_embedding.ipynb  2-5_RAG_vector_store.ipynb  README.md  ch08_embedding.ipynb  history.txt
lecture/phdshinai/: .gitignore  README.md  ann-04-1st-perceptron.ipynb  ann-10-multilayer.ipynb  ann-12-som-lab.ipynb  dl101-02-custom-cnn.ipynb  dl101-04-rnn-from-scratch.ipynb  dl101-10-autoencoder.ipynb  dl101-12-dcgan.ipynb  dl101-24-vae.ipynb  main.py  pyproject.toml
numpy/official-docs/: quickstart.ipynb  routines.ipynb
pandas/wesmckinney/: ch05_pd_basics.ipynb  ch07_pd_cleaning.ipynb  ch08_pd_wrangling.ipynb  ch10_pd_agg_group.ipynb  ch11_pd_timeseries.ipynb
pytorch/official-docs/: torch.ipynb  torch.nn.functional.ipynb  torch.nn.ipynb
pytorch/official-tutorial/: 02_tensorqs_tutorial.ipynb  03_data_tutorial.ipynb  05_buildmodel_tutorial.ipynb  06_autogradqs_tutorial.ipynb
test/: numpy.ipynb  test-torch.ipynb  test.ipynb  test.py
test/pandas/: scikit-learn.ipynb  (+1 more)
(+11 files in other folders)
