[project]
name = "phdshinai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.5",
    "nbdev>=2.4.5",
    "numpy>=2.3.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]
